--- a/SolviaDynamics365AddressManager/Components/Layout/MainLayout.razor
+++ b/SolviaDynamics365AddressManager/Components/Layout/MainLayout.razor
@@ -3,6 +3,7 @@
 <nav>
     <ul>
         <li><NavLink href="/accounts" class="nav-link">Accounts</NavLink></li>
+        <li><NavLink href="/contacts" class="nav-link">Contacts</NavLink></li> <!-- New Link for Contacts -->
         <li><NavLink href="/create-account" class="nav-link">Create Account</NavLink></li>
     </ul>
 </nav>
