--- a/SolviaDynamics365AddressManager/Components/Pages/Accounts.razor
+++ b/SolviaDynamics365AddressManager/Components/Pages/Accounts.razor
@@ -1,34 +1,10 @@
 ﻿@page "/accounts"
-@using Newtonsoft.Json
 @using SolviaDynamics365AddressManager.Models
 @inject SolviaDynamics365AddressManager.Services.DynamicsService dynamicsService
 
 <h3>Accounts</h3>
 
-@if (accounts == null)
-{
-    <p>Loading accounts...</p>
-}
-else if (accounts.Count == 0)
-{
-    <p>No accounts found.</p>
-}
-else
-{
-    <div class="custom-grid">
-        <div class="custom-grid-header">
-            <div class="custom-grid-cell">Account Name</div>
-            <div class="custom-grid-cell">Account ID</div>
-        </div>
-        @foreach (var account in accounts)
-        {
-            <div class="custom-grid-row">
-                <div class="custom-grid-cell">@account.Name</div>
-                <div class="custom-grid-cell">@account.AccountId</div>
-            </div>
-        }
-    </div>
-}
+<DynamicTable Items="accounts" />
 
 @code {
     private List<Account> accounts;
