--- a/SolviaDynamics365AddressManager/Components/Layout/MainLayout.razor
+++ b/SolviaDynamics365AddressManager/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
     <ul>
         <li><NavLink href="/accounts" class="nav-link">Accounts</NavLink></li>
         <li><NavLink href="/contacts" class="nav-link">Contacts</NavLink></li> <!-- New Link for Contacts -->
-        <li><NavLink href="/create-account" class="nav-link">Create Account</NavLink></li>
+        <li><NavLink href="/search" class="nav-link">Search</NavLink></li>
     </ul>
 </nav>
 
