--- a/SolviaDynamics365AddressManager/Components/Pages/Home.razor
+++ b/SolviaDynamics365AddressManager/Components/Pages/Home.razor
@@ -2,6 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hi,</h1>
 
-Welcome to your new app.
+Welcome to Solvia Dynamics 365 Address Lookup
