--- a/SolviaDynamics365AddressManager/wwwroot/app.css
+++ b/SolviaDynamics365AddressManager/wwwroot/app.css
@@ -1,3 +1,6 @@
+body, html {
+    font-family: Arial, sans-serif;
+}
 h1:focus {
     outline: none;
 }
@@ -95,7 +98,6 @@ nav ul {
 .dynamic-table {
     width: 100%;
     border-collapse: collapse;
-    font-family: Arial, sans-serif;
 }
 
     .dynamic-table th, .dynamic-table td {
